# GourmetClient

./: .env.example  .gitignore  AI_CONTEXT.md  CLAUDE.md  Directory.Build.props  GourmetClient.sln  GourmetClient.sln.DotSettings  MVVM_IMPLEMENTATION_SUMMARY.md  README.md  ship.sh
.github/workflows/: release.yml
analysis/: playwright-findings.md
docs/: MVU-vs-MVVM-Comparison.md  README-iOS-Implementation.md  app-store-release.md  iOS-MVVM-Implementation.md  iOS-UI-Visual-Layout.md  privacy.html
docs/plans/: 2026-02-03-maui-mobile-redesign.md  2026-02-03-maui-refactor-design.md  2026-02-21-cache-menus-orders-design.md  2026-02-21-menu-reordering-design.md  2026-02-21-menu-reordering-impl.md  2026-02-21-themes-app-icon-design.md  2026-02-21-themes-app-icon-impl.md
scripts/: run-android-emulator.sh  run-ios-simulator.sh
src/: Directory.Build.props  GC.sln  GourmetClient.sln  TrimmerRoots.xml  src.sln
src/GC.Android/: GC.Android.csproj  MainActivity.cs
src/GC.Cache/: BillingService.cs  GC.Cache.csproj  SqliteService.cs
src/GC.Common/: Base.cs  Crypto.cs  ErrorEventArgs.cs  Extensions.cs  GC.Common.csproj  InfoEventArgs.cs  Log.cs  Logger.cs
src/GC.Core/: GC.Core.csproj
src/GC.Desktop/: DesktopApp.cs  GC.Desktop.csproj  Program.cs  app.manifest
src/GC.Frontend/: App.axaml  App.axaml.cs  GC.Frontend.csproj
src/GC.Frontend.Desktop/: App.axaml  App.axaml.cs  GC.Frontend.Desktop.csproj
src/GC.Frontend.Mobile/: App.axaml  App.axaml.cs  App.xaml  App.xaml.cs  GC.Frontend.Mobile.csproj  MauiProgramExtensions.cs
src/GC.Models/: BillingMonth.cs  Day.cs  Extensions.cs  GC.Models.csproj  InvoiceMonth.cs  Menu.cs  MenuOrder.cs  Position.cs  Settings.cs  Transaction.cs
src/GC.Tests/: Init.cs  (+1 more)
src/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/desktop/src-tauri/capabilities/: main.json
src/desktop/src-tauri/icons/: icon.icns
src/desktop/src-tauri/src/: lib.rs  main.rs
(+860 files in other folders)
