[package]
name = "gourmet-client"
version = "0.0.2"
description = "Desktop client for Gourmet cafeteria system"
edition = "2021"

[lib]
name = "gourmet_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
velopack = { version = "*", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
