[package]
name = "gourmet-client"
version = "1.1.7"
description = "Desktop client for Gourmet cafeteria system"
edition = "2021"

[lib]
name = "gourmet_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
velopack = { version = "*", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["cookies", "multipart", "rustls-tls-native-roots", "system-proxy", "blocking"], default-features = false }
tokio = { version = "1", features = ["sync"] }
